Update fastlane stuff (release note & and support url)

--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,8 @@
-- Add link
+- Add menu About
+- Add menu Disconnect
+
+- Add link from app
+
+- More help to configure the app
+
+- Fix bug rendering video in article view
