--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,9 +1,7 @@
-- Fix crash on start 
-- Fix add article
+We add some new cool features like :
+	- Theme
+	- ability to justify article or not
+	- Share extension
+	- Add some icon on article for unread or favorite 
 
-- Add menu About
-- Add menu Disconnect
-- Add menu parameter, now you can choose your favorite default opening view
-- Now you can add link from app
-- More help in registering processus
-- Fix bug rendering video in article view
+And we fix some bug
