Add text for the release note

--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -2,6 +2,7 @@ We add some new cool features like :
 	- Theme
 	- ability to justify article or not
 	- Share extension
-	- Add some icon on article for unread or favorite 
+	- Add some icon on article for unread or favorite
+	- Support non standart port
 
-And we fix some bug
+And Bug fix
