Create new lane for screenshot Create new scheme for screenshot Update screenshot and release note

--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,6 +1,6 @@
 We add some new cool features like :
 	- Theme
-	- ability to justify article or not
+	- Ability to justify article or not
 	- Share extension
 	- Add some icon on article for unread or favorite
 	- Support non standart port
