--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,8 +1,5 @@
-We add some new cool features like :
-	- Theme
-	- Ability to justify article or not
-	- Share extension
-	- Add some icon on article for unread or favorite
-	- Support non standart port
-
-And Bug fix
+In this release you can have badge on your app icon which will represent items in your default list view (if it's the unread list, you'll have a badge with the number of unread items, etc.). This feature can be disabled in settings.
+We fixed some bugs, like articles in list which doesn't match the selected filter and some problem with theme.
+Share extension are completly reworked and should work everywhere now !
+Article list is now more clear and a tap on the title will scroll up to the top.
+wallabag is now available on iOS 9.0 too (we care about people using that old iOS from 1 year and a half)
