--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,5 +1,5 @@
-Bienvenue à la version 2.0 !
-Cette version apporte le mode offline.
+Bienvenue en version 2.0 !
+Cette version apporte le mode hors-ligne.
 Et vous pouvez maintenant rechercher vos articles dans l'application et depuis spotlight.
 
-C'est peu de nouveautés, mais nous avons profité de la 2.0 pour nettoyer beaucoup de code.
+Cela fait peu de nouveautés, mais nous avons profité de la 2.0 pour nettoyer beaucoup de code.
