--- a/wallabag/fr.lproj/Localizable.strings
+++ b/wallabag/fr.lproj/Localizable.strings
@@ -6,17 +6,17 @@
   Copyright © 2017 maxime marinel. All rights reserved.
 */
 
-#Common
+//Common
 "Error" = "Erreur";
 "Cancel" = "Annuler";
 
-#ArticleTableViewCell
+//ArticleTableViewCell
 "Reading time %@" = "Temps de lecture %@";
 
-#AboutViewController
+//AboutViewController
 "Version %@ build %@" = "Version %@ build %@";
 
-#ArticlesTableViewController
+//ArticlesTableViewController
 "Delete" = "Supprimer";
 "Unstar" = "Unstar";
 "Star" = "Star";
@@ -26,5 +26,5 @@
 "Add" = "Ajouter";
 "Url" = "Adresse";
 
-#ServerViewController
-"Whoops looks like something went wrong. Check the url, don't forget http or https" = "Whoops looks like something went wrong. Check the url, don't forget http or https"
+//ServerViewController
+"Whoops looks like something went wrong. Check the url, don't forget http or https" = "Whoops looks like something went wrong. Check the url, don't forget http or https";
