--- a/wallabag/Storyboard/fr.lproj/Main.strings
+++ b/wallabag/Storyboard/fr.lproj/Main.strings
@@ -1,72 +1,71 @@
 
 /* Class = "UINavigationItem"; title = "Server"; ObjectID = "03w-5D-czm"; */
-"03w-5D-czm.title" = "Server";
+"03w-5D-czm.title" = "Serveur";
 
 /* Class = "UINavigationItem"; title = "About"; ObjectID = "1Lt-G4-Rie"; */
-"1Lt-G4-Rie.title" = "About";
-
-/* Class = "UIButton"; normalTitle = "Create account on wallabag.it"; ObjectID = "2a9-yC-pw0"; */
-"2a9-yC-pw0.normalTitle" = "Create account on wallabag.it";
+"1Lt-G4-Rie.title" = "A propos";
 
 /* Class = "UIButton"; normalTitle = "Next"; ObjectID = "2e6-On-1Cd"; */
-"2e6-On-1Cd.normalTitle" = "Next";
+"2e6-On-1Cd.normalTitle" = "Suivant";
 
 /* Class = "UITableViewSection"; headerTitle = "Article default list"; ObjectID = "3cW-8W-1Xl"; */
-"3cW-8W-1Xl.headerTitle" = "Article default list";
+"3cW-8W-1Xl.headerTitle" = "Article par défaut";
 
 /* Class = "UINavigationItem"; title = "Title"; ObjectID = "51o-Ow-BBE"; */
-"51o-Ow-BBE.title" = "Title";
+"51o-Ow-BBE.title" = "Titre";
 
 /* Class = "UILabel"; text = "Wallabag"; ObjectID = "5IJ-gJ-VQh"; */
-"5IJ-gJ-VQh.text" = "Wallabag";
+"5IJ-gJ-VQh.text" = "wallabag";
 
 /* Class = "UIButton"; normalTitle = "Open my developer page"; ObjectID = "AM9-CO-l8h"; */
-"AM9-CO-l8h.normalTitle" = "Open my developer page";
+"AM9-CO-l8h.normalTitle" = "Ouvrir ma page de développeur";
 
 /* Class = "UITextView"; text = "Well, now the client_id and client_secret.\n\nThis token are secret and can be found in your developer page, And create a new client or use an already existing token"; ObjectID = "Bkh-cz-HgQ"; */
-"Bkh-cz-HgQ.text" = "Well, now the client_id and client_secret.\n\nThis token are secret and can be found in your developer page, And create a new client or use an already existing token";
+"Bkh-cz-HgQ.text" = "Bien, maintenant le client_id et client_secret.\n\nCes jetons sont secrets et peuvent être trouvées dans votre page développeur, Vous pouvez créer un nouveau ou utiliser un existant";
 
 /* Class = "UITextField"; placeholder = "Username"; ObjectID = "C1D-rB-gOJ"; */
-"C1D-rB-gOJ.placeholder" = "Username";
+"C1D-rB-gOJ.placeholder" = "Login";
 
 /* Class = "UITableViewSection"; headerTitle = "Theme"; ObjectID = "C5u-67-6oh"; */
-"C5u-67-6oh.headerTitle" = "Theme";
+"C5u-67-6oh.headerTitle" = "Thème";
 
 /* Class = "UILabel"; text = "Wallabag"; ObjectID = "FRs-RA-L1c"; */
-"FRs-RA-L1c.text" = "Wallabag";
+"FRs-RA-L1c.text" = "wallabag";
 
 /* Class = "UINavigationItem"; title = "Auth"; ObjectID = "GhO-El-f27"; */
-"GhO-El-f27.title" = "Auth";
+"GhO-El-f27.title" = "Authentification";
 
 /* Class = "UILabel"; text = "Justify"; ObjectID = "IjZ-Yg-nJ5"; */
-"IjZ-Yg-nJ5.text" = "Justify";
+"IjZ-Yg-nJ5.text" = "Justifier";
 
 /* Class = "UILabel"; text = "Starred articles"; ObjectID = "Jq2-Nb-TZS"; */
-"Jq2-Nb-TZS.text" = "Starred articles";
+"Jq2-Nb-TZS.text" = "Articles favoris";
 
 /* Class = "UILabel"; text = "Unread articles"; ObjectID = "L2O-zX-aIh"; */
-"L2O-zX-aIh.text" = "Unread articles";
+"L2O-zX-aIh.text" = "Articles non lus";
 
 /* Class = "UILabel"; text = "All articles"; ObjectID = "Oak-js-p1q"; */
-"Oak-js-p1q.text" = "All articles";
+"Oak-js-p1q.text" = "Tous les articles";
 
 /* Class = "UILabel"; text = "wallabag v2 for iOS"; ObjectID = "OmZ-lq-KqG"; */
-"OmZ-lq-KqG.text" = "wallabag v2 for iOS";
+"OmZ-lq-KqG.text" = "wallabag v2 pour iOS";
 
-/* Class = "UILabel"; text = "Report issue:  https://github.com/wallabag/ios-app/issues"; ObjectID = "ROP-iA-4oU"; */
-"ROP-iA-4oU.text" = "Report issue:  https://github.com/wallabag/ios-app/issues";
+/* Class = "UILabel"; text = "Report issue:
+ https://github.com/wallabag/ios-app/issues"; ObjectID = "ROP-iA-4oU"; */
+"ROP-iA-4oU.text" = "Remonter un bug:
+ https://github.com/wallabag/ios-app/issues";
 
 /* Class = "UILabel"; text = "Unread articles"; ObjectID = "T0z-d1-R3T"; */
-"T0z-d1-R3T.text" = "Unread articles";
+"T0z-d1-R3T.text" = "Articles non lus";
 
 /* Class = "UITextField"; placeholder = "Password"; ObjectID = "UQC-pk-uO1"; */
-"UQC-pk-uO1.placeholder" = "Password";
+"UQC-pk-uO1.placeholder" = "Mot de passe";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "VKB-cB-po0"; */
-"VKB-cB-po0.text" = "Title";
+"VKB-cB-po0.text" = "Titre";
 
 /* Class = "UINavigationItem"; title = "Settings"; ObjectID = "WwB-ip-ILW"; */
-"WwB-ip-ILW.title" = "Settings";
+"WwB-ip-ILW.title" = "Paramètres";
 
 /* Class = "UITableViewSection"; headerTitle = "Article"; ObjectID = "YmF-qh-OwI"; */
 "YmF-qh-OwI.headerTitle" = "Article";
@@ -75,13 +74,13 @@
 "ZjL-wI-QTt.title" = " Articles";
 
 /* Class = "UIButton"; normalTitle = "Register"; ObjectID = "Zn4-yG-cxW"; */
-"Zn4-yG-cxW.normalTitle" = "Register";
+"Zn4-yG-cxW.normalTitle" = "S'enregistrer";
 
 /* Class = "UILabel"; text = "Settings"; ObjectID = "afM-i7-0Kb"; */
-"afM-i7-0Kb.text" = "Settings";
+"afM-i7-0Kb.text" = "Paramètres";
 
 /* Class = "UITableViewController"; title = "Settings"; ObjectID = "cre-7a-Z1t"; */
-"cre-7a-Z1t.title" = "Settings";
+"cre-7a-Z1t.title" = "Paramètres";
 
 /* Class = "UITextField"; placeholder = "ClientId"; ObjectID = "dsM-5G-HXR"; */
 "dsM-5G-HXR.placeholder" = "ClientId";
@@ -90,70 +89,70 @@
 "eDD-og-deR.text" = "Article title big and long title";
 
 /* Class = "UITableViewSection"; headerTitle = "Other"; ObjectID = "eJr-Jk-JW5"; */
-"eJr-Jk-JW5.headerTitle" = "Other";
+"eJr-Jk-JW5.headerTitle" = "Autre";
 
 /* Class = "UITextField"; placeholder = "Server"; ObjectID = "eWS-vU-XLm"; */
-"eWS-vU-XLm.placeholder" = "Server";
+"eWS-vU-XLm.placeholder" = "Serveur";
 
 /* Class = "UILabel"; text = "About"; ObjectID = "eXt-Oa-Lm6"; */
-"eXt-Oa-Lm6.text" = "About";
+"eXt-Oa-Lm6.text" = "A propos";
 
 /* Class = "UITableViewSection"; headerTitle = "Badge"; ObjectID = "hNQ-C1-sdE"; */
 "hNQ-C1-sdE.headerTitle" = "Badge";
 
 /* Class = "UILabel"; text = "Wallabag"; ObjectID = "hZI-U1-cVg"; */
-"hZI-U1-cVg.text" = "Wallabag";
+"hZI-U1-cVg.text" = "wallabag";
 
 /* Class = "UITextField"; placeholder = "ClientSecret"; ObjectID = "iBk-4L-sqH"; */
 "iBk-4L-sqH.placeholder" = "ClientSecret";
 
 /* Class = "UILabel"; text = "Read articles"; ObjectID = "id6-5J-i15"; */
-"id6-5J-i15.text" = "Read articles";
+"id6-5J-i15.text" = "Articles lus";
 
 /* Class = "UINavigationItem"; title = "Wallabag"; ObjectID = "kGU-bR-BWV"; */
-"kGU-bR-BWV.title" = "Wallabag";
+"kGU-bR-BWV.title" = "wallabag";
 
 /* Class = "UILabel"; text = "Reading time 00:00"; ObjectID = "kgC-hH-jOI"; */
-"kgC-hH-jOI.text" = "Reading time 00:00";
+"kgC-hH-jOI.text" = "Temps de lecture 00:00";
 
 /* Class = "UIButton"; normalTitle = "Next"; ObjectID = "mDJ-gL-tA5"; */
-"mDJ-gL-tA5.normalTitle" = "Next";
+"mDJ-gL-tA5.normalTitle" = "Suivant";
 
 /* Class = "UILabel"; text = "Show badge"; ObjectID = "mw6-pB-lz5"; */
-"mw6-pB-lz5.text" = "Show badge";
+"mw6-pB-lz5.text" = "Afficher le badge";
 
 /* Class = "UILabel"; text = "Version 1.0.0 build 14"; ObjectID = "p4F-5W-KZX"; */
 "p4F-5W-KZX.text" = "Version 1.0.0 build 14";
 
 /* Class = "UILabel"; text = "Disconnect"; ObjectID = "pO6-f6-PiT"; */
-"pO6-f6-PiT.text" = "Disconnect";
+"pO6-f6-PiT.text" = "Déconnecter";
 
 /* Class = "UILabel"; text = "Wallabag"; ObjectID = "qDI-0H-Usb"; */
-"qDI-0H-Usb.text" = "Wallabag";
+"qDI-0H-Usb.text" = "wallabag";
 
 /* Class = "UILabel"; text = "website"; ObjectID = "reg-oP-baY"; */
-"reg-oP-baY.text" = "website";
+"reg-oP-baY.text" = "Site internet";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "sIr-IY-HU7"; */
-"sIr-IY-HU7.text" = "Title";
+"sIr-IY-HU7.text" = "Titre";
 
 /* Class = "UIButton"; normalTitle = "Next"; ObjectID = "teE-c3-any"; */
-"teE-c3-any.normalTitle" = "Next";
+"teE-c3-any.normalTitle" = "Suivant";
 
 /* Class = "UILabel"; text = "Read articles"; ObjectID = "tpY-2N-dv1"; */
-"tpY-2N-dv1.text" = "Read articles";
+"tpY-2N-dv1.text" = "Articles lus";
 
 /* Class = "UILabel"; text = "All articles"; ObjectID = "uDI-eD-zGh"; */
-"uDI-eD-zGh.text" = "All articles";
+"uDI-eD-zGh.text" = "Tous les articles";
 
 /* Class = "UINavigationItem"; title = "Client Id"; ObjectID = "uvq-Qw-sZt"; */
 "uvq-Qw-sZt.title" = "Client Id";
 
 /* Class = "UILabel"; text = "Starred articles"; ObjectID = "vWc-HK-q7e"; */
-"vWc-HK-q7e.text" = "Starred articles";
+"vWc-HK-q7e.text" = "Articles favoris";
 
 /* Class = "UILabel"; text = "Made by Maxime Marinel (@bourvill)"; ObjectID = "wsy-Ao-UlA"; */
-"wsy-Ao-UlA.text" = "Made by Maxime Marinel (@bourvill)";
+"wsy-Ao-UlA.text" = "Fait par Maxime Marinel (@bourvill)";
 
 /* Class = "UITableViewSection"; headerTitle = "Articles"; ObjectID = "wu1-pA-PCy"; */
 "wu1-pA-PCy.headerTitle" = "Articles";
