Translate Tip page And fix reading time in articles list

--- a/wallabag/Storyboard/de.lproj/Main.strings
+++ b/wallabag/Storyboard/de.lproj/Main.strings
@@ -157,3 +157,6 @@
 
 /* Class = "UITableViewSection"; headerTitle = "Articles"; ObjectID = "wu1-pA-PCy"; */
 "wu1-pA-PCy.headerTitle" = "Artikel";
+
+/* Class = "UILabel"; text = "Tip"; ObjectID = "hwn-bm-Zgf"; */
+"hwn-bm-Zgf.text" = "Geschenk";
