--- a/wallabag/fr.lproj/Localizable.strings
+++ b/wallabag/fr.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 
 //ServerViewController
 "Whoops looks like something went wrong. Check the url, don't forget http or https" = "Oops, on dirait qu'il y a eu un problème. Vérifiez l'url, n'oubliez pas http ou https";
+
+//TipViewController
+"This application is developed on free time, it is free and will remain so. But you can contribute financially by making a donation whenever you want to support the project." = "Cette application est développée sur le temps libre, elle est gratuite et la restera ainsi.Mais vous pouvez contribuer financièrement en faisant un don chaque fois que vous souhaitez soutenir le projet.";
