--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,9 @@
+Hello utilisateur de Wallabag!
+Dans cette version, nous avons ajoutés quelques fonctionnalités intéressantes:
+- Enregistrer la position de lecture sur un article
+- Vous pouvez maintenant ajouter un article depuis la page de lecture
+- Cacher le menu principal lorsque vous lisez un article
+- Nous reportons l'autorisation de la demande pour la notification lorsque votre application est configurée
+- traduction française et allemande
 
+Maintenant, vous pouvez récompenser le développeur quand vous voulez.
