--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,9 @@
+Hello wallabag user!
+In this release we add some cool features:
+- Save read position on an article
+- You can now add an article from reading article page
+- Hide top menu when you read an article
+- We defer the request authorization for notification when your app is configured
+- French and german translation
 
+Now you can reward the developer when ever you want.
