On Home Page, text when you swipe an article is too long fix #100

--- a/wallabag/fr.lproj/Localizable.strings
+++ b/wallabag/fr.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 
 //ArticlesTableViewController
 "Delete" = "Supprimer";
-"Unstar" = "Retiré des favoris";
+"Unstar" = "Retirer\n des favoris";
 "Star" = "Favoris";
 "Unread" = "Non lu";
 "Read" = "Lu";
