--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,9 +1,11 @@
-Hallo wallabag-Nutzer!
-In diesem Update haben wir neue coole Features hinzugefügt:
-- Leseposition zum Artikel wird gespeichert
-- Artikel können direkt aus der Leseansicht hinzugefügt werden
-- Oberes Menü kann beim Lesen versteckt werden
-- Verzögerte Anmelde-Anforderung während der App-Konfiguration
-- Französische und deutsche Übersetzung hinzugefügt
+Hello wallabag user!
 
-Nun kannst du auch den Entwickler belohnen, wann immer du möchtest.
+In this release we fix some bugs:
+- Arrange Ipad UI
+- Badge always show
+- App freeze on article
+- Arrange text on swipe article
+- Top bar disappearing on the homepage 
+- Page Tip and About UI
+
+If you like our app, do not hesitate to add comments on the app store
