--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,9 +1,11 @@
 Hello wallabag user!
-In this release we add some cool features:
-- Save read position on an article
-- You can now add an article from reading article page
-- Hide top menu when you read an article
-- We defer the request authorization for notification when your app is configured
-- French and german translation
 
-Now you can reward the developer when ever you want.
+In this release we fix some bugs:
+- Arrange Ipad UI
+- Badge always show
+- App freeze on article
+- Arrange text on swipe article
+- Top bar disappearing on the homepage 
+- Page Tip and About UI
+
+If you like our app, do not hesitate to add comments on the app store
