Prepare release note

--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,11 +1,18 @@
 Hello wallabag user!
 
-In this release we fix some bugs:
-- Arrange Ipad UI
-- Badge always show
-- App freeze on article
-- Arrange text on swipe article
-- Top bar disappearing on the homepage 
-- Page Tip and About UI
+I worked hard on this release to provide a real read it later app.
+All articles are now synced to your device.
 
-If you like our app, do not hesitate to add comments on the app store
+You can now try the speech synthesis on article view, it's not perfect but it's here, enjoy!
+
+I add home screen action.
+
+I've reworked on the theme, the app is now trying to follow your selected theme everywhere.
+
+Now when your are on article view your device won't be lock
+
+Special thank to 0wnrepo, he added Romanian Localization! thanks dude!
+
+If you like our app, do not hesitate to add comments on the app store, write review, and tip in app!
+
+Enjoy your read!
