Add missing translate

--- a/wallabag/de.lproj/Localizable.strings
+++ b/wallabag/de.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 //Common
 "Error" = "Fehler";
 "Cancel" = "Abbrechen";
+"Are you sure?" =  "Bist du sicher?";
 
 //ArticleTableViewCell
 "Reading time %@" = "Lesezeit %@";
@@ -29,7 +30,6 @@
 "Read articles" = "Gelesene Artikel";
 "Starred articles" = "Favorisierte Artikel";
 "Unread articles" = "Ungelesene Artikel";
-
 
 //ServerViewController
 "Whoops looks like something went wrong. Check the url, don't forget http or https" = "Anscheinend ist etwas schiefgelaufen. Überprüfe die URL, vergiss nicht das https oder http.";
