Disconnect should have a warning/confirmation dialogue fix #130

--- a/wallabag/de.lproj/Localizable.strings
+++ b/wallabag/de.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Cancel" = "Abbrechen";
 "Are you sure?" =  "Bist du sicher?";
 "Authentication error" = "Authentifizierungsfehler";
+"Disconnect" = "Verbindung trennen";
 
 //ArticleTableViewCell
 "Reading time %@" = "Lesezeit %@";
