--- a/wallabag/ro.lproj/Localizable.strings
+++ b/wallabag/ro.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 //Common
 "Error" = "Eroare";
 "Cancel" = "Cancel";
+"Disconnect" = "Deconectare";
 
 //ArticleTableViewCell
 "Reading time %@" = "Timp de lectură %@";
