--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,3 +1,10 @@
 Hello wallabag users!
 
-Small fix for synchronization issues
+I have rework the sync task, you have now a progress information.
+
+Add confirm on disconnect action
+Add accessibility label for action on article view
+
+Fix missing translation
+Fix minor cropping issue with icon of share extension
+
