--- a/wallabag/Storyboard/fr.lproj/Main.strings
+++ b/wallabag/Storyboard/fr.lproj/Main.strings
@@ -45,12 +45,10 @@
 "Oak-js-p1q.text" = "Tous les articles";
 
 /* Class = "UILabel"; text = "wallabag v2 for iOS"; ObjectID = "OmZ-lq-KqG"; */
-"OmZ-lq-KqG.text" = "wallabag v2 pour iOS";
+"OmZ-lq-KqG.text" = "Wallabag Reader";
 
-/* Class = "UILabel"; text = "Report issue:
- https://github.com/wallabag/ios-app/issues"; ObjectID = "ROP-iA-4oU"; */
-"ROP-iA-4oU.text" = "Remonter un bug:
- https://github.com/wallabag/ios-app/issues";
+/* Class = "UILabel"; text = "Report bug"; ObjectID = "Td2-rf-4Mi"; */
+"Td2-rf-4Mi.normalTitle" = "Remonter un bug";
 
 /* Class = "UILabel"; text = "Unread articles"; ObjectID = "T0z-d1-R3T"; */
 "T0z-d1-R3T.text" = "Articles non lus";
