--- a/wallabag/Storyboard/ro.lproj/Main.strings
+++ b/wallabag/Storyboard/ro.lproj/Main.strings
@@ -51,7 +51,7 @@
 "Oak-js-p1q.text" = "Toate articolele";
 
 /* Class = "UILabel"; text = "wallabag v2 for iOS"; ObjectID = "OmZ-lq-KqG"; */
-"OmZ-lq-KqG.text" = "wallabag v2 pentru iOS";
+"OmZ-lq-KqG.text" = "Wallabag Reader";
 
 /* Class = "UILabel"; text = "Report issue:
  https://github.com/wallabag/ios-app/issues"; ObjectID = "ROP-iA-4oU"; */
