--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,1 +1,6 @@
-Support 2.3.6 server version
+Version 4.0.0 has just been released, it marks a significant change.
+If you want to continue using the open source version, go to the github of the wallabag project to get the application.
+
+This application will continue to evolve to meet your demands. Do not hesitate to submit your ideas.
+
+Good reading.
