Suggest change from PR

--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,4 +1,4 @@
-Here they are finally! But who are? Tags!
+Here they are! But who? Tags! Finally!
 
 You can finally read your tags, add them on your articles! This is finally available!
 
