--- a/wallabag/Storyboard/ro.lproj/Registration.strings
+++ b/wallabag/Storyboard/ro.lproj/Registration.strings
@@ -26,8 +26,8 @@
 /* Class = "UITextField"; placeholder = "Password"; ObjectID = "UQC-pk-uO1"; */
 "UQC-pk-uO1.placeholder" = "Parolă";
 
-/* Class = "UIButton"; normalTitle = "Register"; ObjectID = "Zn4-yG-cxW"; */
-"Zn4-yG-cxW.normalTitle" = "Înregistrare";
+/* Class = "UIButton"; normalTitle = "Log in"; ObjectID = "Zn4-yG-cxW"; */
+"Zn4-yG-cxW.normalTitle" = "A se conecta";
 
 /* Class = "UITextField"; placeholder = "ClientId"; ObjectID = "dsM-5G-HXR"; */
 "dsM-5G-HXR.placeholder" = "ClientId";
